[dev1.0] - Create New Base Component, Enhancement & Minor Fixing
- add Base Mapper Component using MapStruct Library
- move several Core DTO to Common Module
- enhance DTO Classes
- change Bean Configuration for Default Validation Handler with ValidationUtility
- Fixing & Enhance BaseServiceBuilder using ProcessContext
- Fixing & Enhance ProcessBuilder